--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "pg": "^8.11.3",
     "prisma": "^5.5.0",
     "ts-node-dev": "^2.0.0",
